2007-10-12  Akim Demaille  <akim.demaille@free.fr>

	Fix ++.
	We need to override clone (in the C++ world) for Atoms.
	* share/urbi/urbi.u (Float.++, Float.--): Rewrite.
	* tests-local.mk: k2-inplace.chk passes.

2007-10-10  Akim Demaille  <akim.demaille@free.fr>

	++ is incorrect.
	* share/urbi/urbi.u (Float.++, Float.--): Try to fix them...
	* tests-local.mk: but acknowledge we failed.

2007-10-10  Akim Demaille  <akim.demaille@free.fr>

	String comparison.
	* share/urbi/urbi.u (String.<=, String.>, String.>=): New.

2007-10-10  Akim Demaille  <akim.demaille@free.fr>

	Makefile.am simplification.
	* src/ast/ast.mk: Fuse two variable increments.

2007-10-10  Akim Demaille  <akim.demaille@free.fr>

	Return floats.
	* src/object/string-class.cc: Do not return Integers, k2 is
	not ready for them.

2007-10-10  Akim Demaille  <akim.demaille@free.fr>

	Missing lval.
	* src/parser/bison/utoken.l: != is expected to have a semantic value.

2007-10-10  Akim Demaille  <akim.demaille@free.fr>

	Fix the priorities.
	* src/parser/bison/ugrammar.y: Strictly follow the C precedence
	rules, except, of course, those for &, |, ;, and ,.

2007-10-10  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Adjust a Makefile.
	* src/ast/ast.mk: Use dist_libkernel_la_SOURCES instead of
	libkernel_la_SOURCES.

2007-10-10  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Simplify the distribution of generated files.
	* src/ast/ast.mk: Put BUILT_SOURCES_ast in libkernel_la_SOURCES
	instead of EXTRA_DIST and nodist_libkernel_la_SOURCES.

2007-10-10  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Distribute urbi.u.
	* Makefile.am: Here.

2007-10-10  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Properly distribute generated AST files.
	* src/ast/ast.mk (EXTRA_DIST): Add BUILT_SOURCES_ast.

2007-10-10  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Fix (again) dependencies in ast.mk.
	* src/ast/ast.mk: Here.

2007-10-10  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Fix compilation dependencies for uconsole.